# oci-vision-ai

./: .gitignore  README.md  docker-compose.oracle.yml  install.sh  pyproject.toml
.github/workflows/: build-install-smoke.yml  dependency-audit.yml  deploy-interactive.yml  readme-walkthrough.yml
docs/: overview.md
docs/audits/: 2026-03-28-end-to-end-audit.md
docs/security/: dependency-audit.md
docs/slides/: oci-vision-demo-cockpit.html  presentation.html
interactive/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
interactive/scripts/: verify-export.mjs
interactive/src/app/: globals.css  layout.tsx  page.tsx
interactive/src/app/components/widgets/: ArchitectureWidget.tsx  OcrWidget.tsx  (+7 more)
notebooks/: 01_quickstart.ipynb  02_classification.ipynb  03_object_detection.ipynb  04_ocr.ipynb  05_face_detection.ipynb  06_document_ai.ipynb  07_custom_models.ipynb
scripts/: ci_smoke_test.sh  dependency_audit.py  readme_walkthrough.sh  verify_object_detection.py
src/oci_vision/: __init__.py
src/oci_vision/cli/: app.py  formatters.py
src/oci_vision/core/: __init__.py  client.py  demo.py  exports.py  insights.py  models.py  recording.py  renderer.py  showcase.py
src/oci_vision/eval/: __init__.py  detection.py  document.py  reports.py  text.py
src/oci_vision/gallery/: __init__.py  manifest.json
src/oci_vision/gallery/responses/: invoice_demo_document.json  portrait_demo_faces.json  sign_board_text.json
src/oci_vision/oracle/: __init__.py  config.py  connection.py  schema.py  search.py  store.py
src/oci_vision/tui/: __init__.py  app.py  cockpit.tcss  insights.py  services.py
src/oci_vision/web/: __init__.py  app.py
src/oci_vision/web/static/: app.js  styles.css
src/oci_vision/web/templates/: base.html  compare.html  gallery.html  index.html  report.html  showcase.html
src/oci_vision/workflows/: __init__.py  archive_search.py  inspection.py  receipts.py  shelf_audit.py
tests/: conftest.py
tests/cli/: test_cli.py  test_cockpit_cli.py
tests/core/: test_client.py  test_demo.py  test_dependency_audit_script.py  test_exports.py  test_gallery.py  test_insights.py  test_models.py  test_oracle_security.py  test_packaging.py  test_recording.py  test_renderer.py  test_showcase.py
tests/eval/: test_cli_eval.py  test_detection.py  test_document.py  test_text.py
tests/oracle/: conftest.py  test_search.py  test_store.py
tests/tui/: test_cockpit_app.py  test_insights.py  test_services.py
tests/web/: test_web.py
tests/workflows/: test_workflows.py
(+1 files in other folders)
